# false-facts-science

./: .gitignore  PLAN.md  POST.md  RESULTS.md  main.py  pyproject.toml
results/: long_qa_judge.jsonl
results/ablate/abl-qasft-programming_languages-s0/: belief_frac1.00.json  config.json  evals.jsonl  train_log.jsonl
results/ablate/abl-sdf-c4_0-d2000-programming_languages-s0/: belief_frac1.00.json  config.json  evals.jsonl  train_log.jsonl
results/ablate/abl-sdf-c4_1-d2000-programming_languages-s0/: config.json  evals.jsonl  train_log.jsonl
results/ablate/abl-sdf-c4_2-d2000-programming_languages-s0/: config.json  evals.jsonl  train_log.jsonl
results/phase1a/lr0.00015_seed0/: config.json  evals.jsonl  rank_frac1.00.json  samples_frac0.25.json  samples_frac0.50.json  samples_frac0.75.json  samples_frac1.00.json  train_log.jsonl
results/phase1a/lr0.00047_seed0/: config.json  evals.jsonl  (+6 more)
results/second_hop_check/: samples.jsonl  summary.json
scripts/: ablate.py  aggregate_phase1.py  audit_corpus.py  conditioned_analysis.py  fetch_c4.py  filter_docs.py  gen_2x2_variants.py  gen_long_qa.py  gen_phase6_diverse_qa.py  gen_qa_paraphrases.py  gen_spouses_contexts.py  gen_universe_contexts.py  hero_figure.py  judge_long_qa.py  length_q2_plots.py  phase1a.py  phase1b.py  phase3_sdf.py  phase4.py  phase6.py  phase6_analysis.py  plots.py  rank_compare.py  run_doc_gen.py  run_revision.py  sanity_check.py  second_hop_check.py  semi_conditioned.py  semi_synth_table.py  shortcut_scan.py
src/twohop/: battery.py  common.py  evals.py  leakage.py  sdf_data.py  sft.py
(+410 files in other folders)
