[project]
name = "false-facts-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "matplotlib>=3.11.0",
    "python-dotenv>=1.2.2",
    "tinker>=0.22.3",
    "tinker-cookbook>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twohop"]
